client/.happypack/s-376111292
SyntaxError: C:/Users/Vincent/Desktop/wemeet/client/app/app.js: Unexpected token (26:13)

[0m [90m 24 | [39m        socket[33m.[39memit([32m'user'[39m[33m,[39muserId)[33m;[39m
 [90m 25 | [39m      }
[31m[1m>[22m[39m[90m 26 | [39m      [36mreturn[39m([33m<[39m[33mActivity[39m user[33m=[39m{userId}[33m/[39m[33m>[39m)[33m;[39m
 [90m    | [39m             [31m[1m^[22m[39m
 [90m 27 | [39m    }
 [90m 28 | [39m    [36melse[39m{
 [90m 29 | [39m      hashHistory[33m.[39mpush([32m'/'[39m)[33m;[39m[0m

BabelLoaderError: SyntaxError: C:/Users/Vincent/Desktop/wemeet/client/app/app.js: Unexpected token (26:13)

[0m [90m 24 | [39m        socket[33m.[39memit([32m'user'[39m[33m,[39muserId)[33m;[39m
 [90m 25 | [39m      }
[31m[1m>[22m[39m[90m 26 | [39m      [36mreturn[39m([33m<[39m[33mActivity[39m user[33m=[39m{userId}[33m/[39m[33m>[39m)[33m;[39m
 [90m    | [39m             [31m[1m^[22m[39m
 [90m 27 | [39m    }
 [90m 28 | [39m    [36melse[39m{
 [90m 29 | [39m      hashHistory[33m.[39mpush([32m'/'[39m)[33m;[39m[0m

    at transpile (C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\index.js:52:13)
    at C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\fs-cache.js:78:18
    at ReadFileContext.callback (C:\Users\Vincent\Desktop\wemeet\client\node_modules\babel-loader\lib\fs-cache.js:14:14)
    at FSReqWrap.readFileAfterOpen [as oncomplete] (fs.js:365:13)